rgwlc/sync: avoid calling merge-and-store-attrs from remove_bucket_config()

Calling merge-and-store attrs turns out to be unsafe from the context of
the metadata sync handler--although I am doubtful that really *should* be
the case.

Fixes: https://tracker.ceph.com/issues/56997

Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>